docs/keycloak/keycloak-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
  name: keycloak
spec:
  host: keycloak-keycloak.apps.tssc.rht-set.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: keycloak
    weight: 100
  wildcardPolicy: None
